feat: Implement AutoSwitch feature with UI and service integration
- Added AutoSwitchCandidateAdapter for displaying proxy candidates in the UI.
- Created layout files for adapter and main AutoSwitch design.
- Developed AutoSwitchModule to handle automatic proxy switching logic.
- Introduced AutoSwitchConfig and AutoSwitchStatusSnapshot models for configuration and status management.
- Implemented AutoSwitchStore for persistent storage of AutoSwitch settings.
- Added drawable resources for UI elements related to AutoSwitch.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -143,6 +143,11 @@
             android:exported="false"
             android:label="@string/settings" />
         <activity
+            android:name=".AutoSwitchActivity"
+            android:configChanges="uiMode"
+            android:exported="false"
+            android:label="@string/auto_switch_title" />
+        <activity
             android:name=".NetworkSettingsActivity"
             android:configChanges="uiMode"
             android:exported="false"
