--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,10 @@ local.properties
 tracker.properties
 
 # vscode
-.vscode
+.vscode/*
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/settings.json
 
 # cxx
 .cxx
