--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,20 +4,20 @@
         {
             "type": "android",
             "request": "launch",
-            "name": "Launch Meta Debug",
+            "name": "Launch Debug",
             "appSrcRoot": "${workspaceFolder}/app/src/main",
-            "apkFile": "${workspaceFolder}/app/build/outputs/apk/meta/debug/app-meta-debug.apk",
+            "apkFile": "${workspaceFolder}/app/build/outputs/apk/debug/app-debug.apk",
             "adbPort": 5037,
-            "preLaunchTask": "Build and Install Meta Debug"
+            "preLaunchTask": "Build and Install Debug"
         },
         {
             "type": "android",
             "request": "launch",
-            "name": "Launch Alpha Debug",
+            "name": "Launch Release",
             "appSrcRoot": "${workspaceFolder}/app/src/main",
-            "apkFile": "${workspaceFolder}/app/build/outputs/apk/alpha/debug/app-alpha-debug.apk",
+            "apkFile": "${workspaceFolder}/app/build/outputs/apk/release/app-release.apk",
             "adbPort": 5037,
-            "preLaunchTask": "Build and Install Alpha Debug"
+            "preLaunchTask": "Build and Install Release"
         },
         {
             "type": "android",
